--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ img {
 
 .nav-link.active {
     color: var(--active-color);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .nav-link:hover,
