--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ img {
 .nav-link:hover,
 .nav-link:focus {
     color: var(--active-color);
+    transition-duration: 250ms;
 }
 
 .address-item:last-child {
@@ -173,6 +174,7 @@ img {
 .address-link:hover,
 .address-link:focus {
     color: var(--active-color);
+    transition-duration: 250ms;
 }
 
 
@@ -232,6 +234,7 @@ img {
 .header-section .header-btn:hover,
 .header-section .header-btn:focus {
     background-color: #188ce8;
+    transition-duration: 250ms;
 }
 
 /* Peculiarities section особливості*/
@@ -366,6 +369,7 @@ img {
 .clients-link:focus {
     border-color: var(--active-color);
     color: var(--active-color);
+    transition-duration: 250ms;
 }
 
 /* Footer */
@@ -423,6 +427,7 @@ img {
 .footer-menu .street-address:hover,
 .footer-menu .street-address:focus {
     color: var(--active-color);
+    transition-duration: 250ms;
 }
 
 .social-title {
@@ -470,6 +475,7 @@ img {
 .social-link:focus {
     background-color: var(--active-color);
     color: var(--prime-white);
+    transition-duration: 250ms;
 }
 
 /* Portfolio page and section */
@@ -514,6 +520,7 @@ img {
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.1);
+        transition-duration: 250ms;
 }
 
 /* Cards */
@@ -537,6 +544,7 @@ img {
 .work-link:hover,
 .work-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition-duration: 250ms;
 }
 
 
