--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
     /* Border color */
     --border-color: #eeeeee;
     --second-border-color: #afb1b8;
+    /* Cubic */
+    --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -128,22 +130,32 @@ img {
 
 
 .nav-link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    text-decoration: none;
-    color: var(--prime-color);
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        text-decoration: none;
+        color: var(--prime-color);
+        transition: color 250ms var(--cubic);
 }
 
 .nav-link.active {
+    position: relative;
     color: var(--active-color);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.nav-link.active::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--active-color);
 }
 
 .nav-link:hover,
 .nav-link:focus {
     color: var(--active-color);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -175,7 +187,6 @@ img {
 .address-link:hover,
 .address-link:focus {
     color: var(--active-color);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -230,12 +241,12 @@ img {
     border: 1px solid transparent;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms var(--cubic);
 }
 
 .header-section .header-btn:hover,
 .header-section .header-btn:focus {
     background-color: #188ce8;
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Peculiarities section особливості*/
@@ -360,6 +371,7 @@ img {
     border: 1px solid var(--second-border-color);
     border-radius: 4px;
     color: var(--second-border-color);
+    transition: background-color 250ms var(--cubic);
 }
 
 .icon-client {
@@ -370,7 +382,6 @@ img {
 .clients-link:focus {
     border-color: var(--active-color);
     color: var(--active-color);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Footer */
@@ -405,6 +416,7 @@ img {
     letter-spacing: 0.03em;
     line-height: 1.71;
     color: var(--prime-white);
+    transition: background-color 250ms var(--cubic);
 }
 
 .footer-address {
@@ -428,7 +440,6 @@ img {
 .footer-menu .street-address:hover,
 .footer-menu .street-address:focus {
     color: var(--active-color);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-title {
@@ -464,6 +475,7 @@ img {
     background-color: var(--social-bg-color);
     color: var(--second-border-color);
     border-radius: 50%;
+    transition: background-color 250ms var(--cubic);
 }
 
 .social-icon {
@@ -476,7 +488,6 @@ img {
 .social-link:focus {
     background-color: var(--active-color);
     color: var(--prime-white);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Portfolio page and section */
@@ -507,6 +518,7 @@ img {
     border-radius: 4px;
     border: none;
     cursor: pointer;
+    transition: background-color 250ms var(--cubic);
 }
 
 .active-btn {
@@ -521,7 +533,6 @@ img {
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.1);
-        transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Cards */
@@ -540,12 +551,12 @@ img {
 .work-link {
     text-decoration: none;
     display: block;
+    transition: background-color 250ms var(--cubic);
 }
 
 .work-link:hover,
 .work-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
