--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ img {
 .peculiarities-items {
     display: flex;
     gap: 30px;
-    align-items: center;
+    /* align-items: center; */
     list-style: none;
 }
 
@@ -334,7 +334,7 @@ img {
     flex-basis: calc((100% - 90px) / 4);
 }
 
-.peculiarities-thumb {
+.peculiarities-direct {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -378,6 +378,27 @@ img {
     display: flex;
     gap: 30px;
     list-style: none;
+}
+
+.doing-thumb {
+    position: relative;
+}
+
+.doing-subtitle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--prime-white);
+    background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* Our Team section */
